--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "aos": "^2.2.0",
     "core-js": "^2.4.1",
     "foundation-sites": "^6.4.4-rc1",
+    "motion-ui": "^1.2.3",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
